# GOCart.64

./: .gitignore  BUILD.txt  CMakeLists.txt
attic/: crt.h
include/: BufferReader.h  CRTParser.h  FileReader.h  Reader.h  board.h  c64_interface.h  cartridge.h  commands.h  file_types.h  i2c_handler.h  menu.h  menu_options.h  menu_sd.h  shell.h
launcher/: Makefile  dir.h  main.c
src/: board.cpp  c64_interface.cpp  cartridge.cpp  commands.cpp  crt.cpp  file_types.cpp  filesystem.cpp  hw_config.cpp  i2c_handler.cpp  main.cpp  menu.cpp  menu_options.cpp  menu_sd.cpp  shell.cpp
